<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.david</groupId>
    <artifactId>deeplearning.test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>DeepLearning4j Test</name>

    <properties>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <nd4j.version>0.9.1</nd4j.version>
        <nd4j.backend>nd4j-native-platform</nd4j.backend>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.nd4j</groupId>
                <artifactId>nd4j-native-platform</artifactId>
                <version>${nd4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.nd4j</groupId>
                <artifactId>nd4j-cuda-9.0-platform</artifactId>
                <version>${nd4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.nd4j</groupId>
                <artifactId>nd4j-cuda-9.2-platform</artifactId>
                <version>${nd4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.nd4j</groupId>
                <artifactId>nd4j-cuda-10.0-platform</artifactId>
                <version>${nd4j.version}</version>
            </dependency>

            <!-- Core DL4J functionality -->
            <dependency>
                <groupId>org.deeplearning4j</groupId>
                <artifactId>deeplearning4j-core</artifactId>
                <version>${nd4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.deeplearning4j</groupId>
                <artifactId>deeplearning4j-nlp</artifactId>
                <version>${nd4j.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.datavec/datavec-api -->
            <dependency>
                <groupId>org.datavec</groupId>
                <artifactId>datavec-api</artifactId>
                <version>${nd4j.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.datavec/datavec-hadoop -->
            <dependency>
                <groupId>org.datavec</groupId>
                <artifactId>datavec-hadoop</artifactId>
                <version>${nd4j.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.datavec/datavec-local -->
            <!--<dependency>-->
                <!--<groupId>org.datavec</groupId>-->
                <!--<artifactId>datavec-local</artifactId>-->
                <!--<version>${nd4j.version}</version>-->
            <!--</dependency>-->


            <!-- deeplearning4j-ui is used for visualization: see http://deeplearning4j.org/visualization -->
            <!--<dependency>-->
                <!--<groupId>org.deeplearning4j</groupId>-->
                <!--<artifactId>deeplearning4j-ui_${scala.binary.version}</artifactId>-->
                <!--<version>${dl4j.version}</version>-->
            <!--</dependency>-->

            <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-core &ndash;&gt;-->
            <!--<dependency>-->
                <!--<groupId>org.apache.spark</groupId>-->
                <!--<artifactId>spark-core_2.12</artifactId>-->
                <!--<version>2.4.0</version>-->
            <!--</dependency>-->
            <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.datavec/datavec-spark &ndash;&gt;-->
            <!--<dependency>-->
                <!--<groupId>org.datavec</groupId>-->
                <!--<artifactId>datavec-spark_2.11</artifactId>-->
                <!--<version>${nd4j.version}_spark_2</version>-->
            <!--</dependency>-->



        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- ND4J backend. You need one in every DL4J project. Normally define artifactId as either "nd4j-native-platform" or "nd4j-cuda-9.2-platform" -->
        <dependency>
            <groupId>org.nd4j</groupId>
            <artifactId>${nd4j.backend}</artifactId>
        </dependency>

        <!-- Core DL4J functionality -->
        <dependency>
            <groupId>org.deeplearning4j</groupId>
            <artifactId>deeplearning4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.deeplearning4j</groupId>
            <artifactId>deeplearning4j-nlp</artifactId>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.datavec/datavec-api -->
        <dependency>
            <groupId>org.datavec</groupId>
            <artifactId>datavec-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.datavec</groupId>
            <artifactId>datavec-hadoop</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.datavec/datavec-local -->
        <dependency>
            <groupId>org.datavec</groupId>
            <artifactId>datavec-local</artifactId>
            <version>1.0.0-beta3</version>
        </dependency>


        <!--<dependency>-->
            <!--<groupId>org.apache.spark</groupId>-->
            <!--<artifactId>spark-core_2.12</artifactId>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>org.datavec</groupId>-->
            <!--<artifactId>datavec-spark_2.11</artifactId>-->
        <!--</dependency>-->



        <!-- Test de WEKA -->
        <!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-dev -->
        <dependency>
            <groupId>nz.ac.waikato.cms.weka</groupId>
            <artifactId>weka-dev</artifactId>
            <version>3.9.3</version>
        </dependency>



    </dependencies>

</project>